# sageattention-autotune

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
bench/: bench_baseline.py  bench_fwd.py  bench_fwd_bwd.py
csrc/: cp_async.cuh  dispatch_utils.h  math.cuh  mma.cuh  numeric_conversion.cuh  permuted_smem.cuh  reduction_utils.cuh  utils.cuh
csrc/fused/: fused.cu  fused.h  pybind.cpp
csrc/qattn/: attn_cuda_sm80.h  attn_cuda_sm89.h  attn_utils.cuh  pybind_sm80.cpp  pybind_sm89.cpp  qk_int8_sv_f16_accum_f16_attn.cu  qk_int8_sv_f16_accum_f16_attn_inst_buf.cu  qk_int8_sv_f16_accum_f16_fuse_v_mean_attn.cu  qk_int8_sv_f16_accum_f32_attn.cu  qk_int8_sv_f16_kernel_sm80.cuh  qk_int8_sv_f16_launch_sm80.cuh  qk_int8_sv_f8_accum_f16_fuse_v_scale_attn_inst_buf.cu  qk_int8_sv_f8_kernel_sm89.cuh  (+4 more)
docs/: sagebwd_triton_plan.md
sageattention/: __init__.py  autotune.py  autotune_utils.py  core.py  core_autotune.py  cuda_attn.py  cuda_autotune.py  cuda_compile.py  quant.py  quant_fp8.py  sm80_compile.py  torch_compile_patch.py  triton_attention.py  triton_attn.py  triton_autotune.py  triton_bwd.py  triton_bwd_autotune.py  triton_bwd_fused.py  triton_bwd_fused_autotune.py  triton_bwd_reuse.py  triton_bwd_reuse_autotune.py  utils.py
tests/: test_sageattn.py  test_sageattn_compile.py  test_sageattn_sm89.py  test_sageattn_triton.py  test_sageattn_triton_compile.py  test_sagebwd_triton.py  test_sagebwd_triton_compile.py  test_sagebwd_triton_fused.py  test_sagebwd_triton_fused_compile.py  test_sagebwd_triton_reuse.py  test_sagebwd_triton_reuse_compile.py
(+9 files in other folders)
