[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ty.analysis]
replace-imports-with-any = ["triton", "triton.**"]

[tool.ty.environment]
python-version = "3.10"
